@@ -1,3 +1,12 @@
+Mon Apr 11 10:23:08 2005  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+ 	* tao/DynamicInterface/Request.h (response_received):
+	* tao/DynamicInterface/Request.inl:
+
+	  Added a new proprietary method to check response alone. Thanks
+	  to David Faure <dfaure@klaralvdalens-datakonsult.se> for
+	  motivating this. 
+
 Mon Apr 11 10:03:45 2005  Ciju John  <john_c@ociweb.com>
 
         * tao/Transport.cpp (dump_iov):
